<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <!-- Hack to absorb the default focus, so that when they click into the field, it pops up the IME -->
    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <TextView
        android:id="@+id/search_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/search_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_message"
        android:text="@string/search_location"
        />

    <com.dancedeets.android.util.DelayAutoCompleteTextView
        android:id="@+id/search_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_location_label"
        android:layout_marginBottom="20dp"
        android:completionThreshold="1"
        android:hint="@string/hint_enter_location"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/search_keywords_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_keywords"
        android:layout_below="@id/search_location"
        />
    <EditText
        android:id="@+id/search_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_keywords_label"
        android:hint="@string/hint_enter_keywords"
        android:selectAllOnFocus="true"
        android:inputType="textAutoCorrect"
        android:layout_marginBottom="10dp"
        />
</RelativeLayout>
