<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/explain_bubble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/use_without_fblogin"/>

    <Button
        android:id="@+id/use_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/explain_bubble"
        android:clickable="true"
        android:onClick="clickedUseWebsite"
        android:text="@string/login_use_website"/>

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/use_website"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/login_or"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_below="@id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@id/login_explain_why_login"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="clickedExplainWhyLogin"
        android:text="@string/login_explain_why_login"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>