<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/empty_events_list_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/bubble"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_events"
            android:background="@drawable/bubble_white_bottom"
            />

        <ImageView
            android:id="@+id/penguin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_full_penguin"
            android:layout_below="@id/bubble"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/penguin_name"/>

    </RelativeLayout>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_button"
        android:layout_centerInParent="true"
        />
</RelativeLayout>