<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/searchProgressContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/loading"
            android:paddingTop="4dip"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout android:id="@+id/searchListContainer"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/event_list_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Loading Events..."
            android:freezesText="true"
            android:background="@color/grey"
            android:padding="5dp"
            />
        <ListView android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/searchEmptyContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/bubble"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_events"
            android:background="@drawable/bubble_white_bottom"
            />
        <ImageView
            android:id="@+id/penguin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_full_penguin"
            android:layout_below="@id/bubble"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/penguin_name"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/searchRetryContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_button"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

</FrameLayout>
